# clotho

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
channels/discord/: index.html
configuration/mcp/: index.html
configuration/permissions/: index.html
configuration/profiles/: index.html
configuration/sandbox/: index.html
docs/: index.md  roadmap-analysis.md
docs/channels/: discord.md
docs/configuration/: mcp.md  permissions.md  profiles.md  sandbox.md
docs/features/: compaction.md  scheduled-jobs.md  skills.md  workspace.md
docs/getting-started/: first-run.md  installation.md
docs/reference/: api.md  cli.md  config-files.md  repl-commands.md
features/compaction/: index.html
features/scheduled-jobs/: index.html
features/skills/: index.html
features/workspace/: index.html
getting-started/first-run/: index.html
getting-started/installation/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/config-files/: index.html
reference/repl-commands/: index.html
search/: search_index.json
src/agent/: LLM.py  core.py
src/agent/models/: content_block.py  conversation_context.py  metadata.py  model_registry.py  stop_reason.py  stream_delta.py  tool.py  tool_call.py  turn.py  usage.py
src/agent/prompts/: system_prompt.py
src/agent/providers/: anthropic.py  ollama.py  openai.py
src/agent/utils/: projects.py
src/channels/discord/: bridge.py  cli.py  config.py  session_map.py
src/channels/whatsapp/: bridge.py  cli.py  config.py  session_map.py
src/cli/: __init__.py  animation.py  api_client.py  commands.py  daemon.py  gateway_manager.py  input.py  main.py  picker.py  repl.py  setup.py  theme.py  ui.py  ws_client.py
src/exceptions/: __init__.py  agent.py  base.py  config.py  gateway.py
src/gateway/: __init__.py  app.py  config.py  dispatcher.py  service.py  session.py
src/gateway/auth/: __init__.py  dependencies.py  setup.py  token.py
src/mcp_client/: __init__.py  auth.py  client.py  config.py  manager.py  tools.py
src/sandbox/: Dockerfile  __init__.py  build_image.py  config.py  exceptions.py  sandbox.py
src/scheduler/: config.py  job.py  runner.py  scheduler.py  session_map.py
src/security/: models.py  permissions.py
src/skills/: __init__.py  loader.py
test/: test_cli_streaming.py  test_controller_streaming.py  test_gateway_streaming.py  test_provider_streaming.py  test_stream_delta.py
(+19 files in other folders)
