[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/gateway", "src/security", "src/sandbox", "src/cli", "src/exceptions", "src/skills", "src/channels"]

[project]
name = "clotho"
version = "0.1.0"
description = "A CLI-based coding agent"
license = {text = "MIT"}
authors = [{name = "Alec Sirkin"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "rich>=13.0.0",
    "setproctitle>=1.3.7",
    "prompt-toolkit>=3.0.52",
    "pyfiglet>=1.0.4",
    "neonize>=0.3.15.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
asyncio_mode = "auto"

[project.scripts]
clotho = "cli.main:main"
clotho-whatsapp = "channels.whatsapp.cli:main"
